<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- analysis_detail strings -->

    <string name="app_name">AlloPet</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="analysis_detail_ek3_string">Analysis Detail</string>
    <string name="result___string">Result            :</string>
    <string name="bacterial_string">Bacterial</string>
    <string name="allopet_string">AlloPet</string>
    <string name="upload_photo_ek3_string">Upload Photo</string>
    <string name="take_picture_string">Take Picture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="camera_x">Camera X</string>
    <string name="failed_take_picture">Failed to Take Picture</string>
    <string name="failed_open_camera">Failed to Open Camera</string>
    <string name="failed_upload_picture">Failed to Upload Picture</string>
    <string name="image">image</string>
    <string name="description">Description</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="windah_basudara_string">Windah Basudara</string>
    <string name="woof_woof__string">Woof Woof.</string>
    <string name="upload_your_pet_photo_string">Upload your pet photo</string>
    <string name="what_are_you_looking_for__string">What are you looking for?</string>
    <string name="doesnt_get_permission">Doesnt get permission</string>
    <string name="select_image">Please Select Image First</string>
    <string name="failed_retrofit">Failed Retrofit Instance</string>
</resources>
